--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 #
 # Resource files are binaries containing manifest, project icon and version info.
 # They can not be viewed as text or compared by diff-tools. Consider replacing them with .rc files.
-#*.res
-#
+*.res
+
 # Type library file (binary). In old Delphi versions it should be stored.
 # Since Delphi 2009 it is produced from .ridl file and can safely be ignored.
 #*.tlb
@@ -68,8 +68,13 @@ __recovery/
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
 *.stat
-*.res
+
+# macOS Desktop Services Store files
 *.DS_Store
+
+# Compiled libraries and binaries
 *.dcu
 *.exe
 
+# Generic temporary files
+*.bak
